[package]
name = "console-utils"
version = "0.1.0"
edition = "2021"
rust-version = "1.69.0"
authors = [
    "Arkiralor <prithoo11335@gmail.com>"
]
description = "Rust package to hold miscellaneous console handling functions."
repository = "https://github.com/Arkiralor/ConsoleUtils/"
readme = "README.md"
license-file = "LICENSE.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
